# api-v3

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg  tripod.yaml
.github/workflows/: main.yml  test.yml
api/: auth.py  bills.py  committees.py  endpoints.py  events.py  framework.py  jurisdictions.py  main.py  pagination.py  people.py  schemas.py  utils.py  views.py
api/db/: __init__.py  models.py
api/db/models/: __init__.py  auth.py  bills.py  common.py  events.py  jurisdiction.py  people_orgs.py  votes.py
api/tests/: conftest.py  fixtures.py  test_bills.py  test_committees.py  test_events.py  test_jurisdictions.py  test_pagination.py  test_people.py  test_segments.py
docker/uwsgi/: Dockerfile  custom-entrypoint
lambda/: lambda_endpoints.py  tripod.yaml
web/: settings.py  urls.py
