[tool.poetry]
name = "openstates-api"
version = "0.1.0"
description = "Future Open States API"
authors = ["James Turk <james@openstates.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.61.0"}
openstates = "^5.0.2"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.5"
pytest = "^6.0.1"
sqlalchemy_utils = "^0.36.8"
gunicorn = "^20.0.4"
sentry-sdk = "^0.17.6"
pybase62 = "^0.4.3"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
