[tool.poetry]
name = "openstates-api"
version = "3.0.0"
description = "Open States API v3"
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openstates = "^6.7.0"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.8.5"
sqlalchemy_utils = "^0.37.0"
gunicorn = "^20.0.4"
sentry-sdk = "^1.0.0"
pybase62 = "^0.4.3"
python-slugify = "^4.0.1"
rrl = "^0.3.1"
prometheus-fastapi-instrumentator = "^5.8.2"
fastapi = {extras = ["all"], version = "^0.87.0"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
